Updated Diversification pie charts to display legend in mobile, added Cash sector. Fixed styling bug with Fund Facts table. Dates in Performance chart are now accurate (they were one day behind).

--- a/public/global.css
+++ b/public/global.css
@@ -433,6 +433,7 @@ table td {
   .fundFactsBlocks table {
     margin: 0px;
     margin-bottom: 30px;
+    width: 100% !important;
   }
   .fundFactsBlocks tr {
     line-height: 1.5;
